# shairport-sync-metadata-reader

./: .gitignore  .travis.yml  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  configure.ac  shairport-sync-metadata-reader.c  valgrind-suppressions.txt
utilities/: bplist-print.c  bplist-print.h  debug.c  debug.h
