bin_PROGRAMS = shairport-sync-metadata-reader
shairport_sync_metadata_reader_SOURCES = shairport-sync-metadata-reader.c


AM_CXXFLAGS = -Wshadow -fno-common -Wno-multichar -Wall -Wextra -Wformat -Wformat=2 -Wno-clobbered -Wno-psabi
AM_CFLAGS = -Wshadow -fno-common -Wno-multichar -Wall -Wextra -Wformat -Wformat=2 -Wno-clobbered -Wno-psabi
