bin_PROGRAMS = shairport-sync-metadata-reader
shairport_sync_metadata_reader_SOURCES = shairport-sync-metadata-reader.c utilities/bplist-print.c utilities/debug.c 

AM_CFLAGS = -Wshadow -fno-common -Wno-multichar -Wall -Wextra -Wformat -Wformat=2 -Wno-psabi --include=config.h --include=utilities/debug.h
